# i2c-tools-iot

./: README.md
eepromer/: eeprog  eeprom  eeprom.c  eepromer
include/: lib24c16.h
tools/: CMakeLists.txt  Makefile.bak  Module.mk  i2cbusses.c  i2cdetect  i2cdump  i2cget  i2cget.c  i2cset  lib24c16.c  util.h
